[package]
name = "stubit"
version = "0.3.0"
edition = "2021"
rust-version = "1.71"
license-file = "LICENSE"
description = "stupid bit library"
repository = "https://github.com/stubit-rs/stubit"
categories = ["data-structures", "encoding", "memory-management", "rust-patterns"]
keywords = ["bit", "bits", "bitvec"]

[dependencies]
